189. Validación personalizada usando anotaciones

--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -1,3 +1,5 @@
 NotEmpty.product.name=es requerido!
 NotBlank.product.description=es requerido, por favor!
 NotNull.product.description=no puede ser nulo, ok!
+IsRequired.product.name=es requerido usando anotaciones, mensaje en properties!
+validation.custom.IsRequired=es requerido usando anotaciones
