--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -1,3 +1,5 @@
 NotEmpty.product.name=is required!
 NotEmpty.product.description=is required, please!
 NotNull.product.description=Can not be null, ok!
+IsRequired.product.name=is required using annotations, message in properties!
+validation.custom.IsRequired=is required using annotations
