190. Validación personalizada usando anotaciones check Db

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -3,3 +3,4 @@ NotEmpty.product.description=is required, please!
 NotNull.product.description=Can not be null, ok!
 IsRequired.product.name=is required using annotations, message in properties!
 validation.custom.IsRequired=is required using annotations
+validation.custom.IsExistsDb=already exists in database!
