--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -3,3 +3,4 @@ NotBlank.product.description=es requerido, por favor!
 NotNull.product.description=no puede ser nulo, ok!
 IsRequired.product.name=es requerido usando anotaciones, mensaje en properties!
 validation.custom.IsRequired=es requerido usando anotaciones
+validation.custom.IsExistsDb=ya existe en la base de datos!
